// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a Summary with many expenses 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $9.99
    .
  </h3>
</div>
`;

exports[`should render a Summary with no expenses 1`] = `
<div>
  <h3>
    Viewing no expenses
  </h3>
</div>
`;

exports[`should render a Summary with one expense 1`] = `
<div>
  <h3>
    Viewing 
    5
     
    expenses
     totalling 
    $2,309,745,230.48
    .
  </h3>
</div>
`;
